--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: postgres
     volumes:
       - ./data/db:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_DB=${BACKEND_DB_NAME}
       - POSTGRES_USER=${BACKEND_DB_USER}
@@ -18,6 +20,7 @@ services:
              python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./django_backend/:/code
+      - ./dumps:/dumps
     ports:
       - "8000:8000"
     environment:
