github oauth fix - added keys to env and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - POSTGRES_DB=${BACKEND_DB_NAME}
       - POSTGRES_USER=${BACKEND_DB_USER}
       - POSTGRES_PASSWORD=${BACKEND_DB_PASSWORD}
+      - SOCIAL_AUTH_GITHUB_KEY=${SOCIAL_AUTH_GITHUB_KEY}
+      - SOCIAL_AUTH_GITHUB_SECRET=${SOCIAL_AUTH_GITHUB_SECRET}
 #    env_file:
 #      - .env
   web:
@@ -33,6 +35,8 @@ services:
       - BACKEND_DB_PASSWORD=${BACKEND_DB_PASSWORD}
       - BACKEND_DB_HOST=${BACKEND_DB_HOST}
       - BACKEND_DB_PORT=${BACKEND_DB_PORT}
+      - SOCIAL_AUTH_GITHUB_KEY=${SOCIAL_AUTH_GITHUB_KEY}
+      - SOCIAL_AUTH_GITHUB_SECRET=${SOCIAL_AUTH_GITHUB_SECRET}
 #    env_file:
 #      - .env
 #      - BACKEND_DB_HOST=postgresql
